@@ -115,11 +115,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-   *) mod_http2: Provide better ready queue implementation and up version to 1.10.7. 
-     trunk patch: http://svn.apache.org/r1800978
-     2.4.x: svn merge -c 1800978 ^/httpd/httpd/trunk .
-     +1: icing, jim, ylavic
-
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
