@@ -7,6 +7,9 @@ Changes with Apache 2.4.27
   
   *) mod_http2: disable and give warning when mpm_prefork is encountered. The server will
      continue to work, but HTTP/2 will no longer be negotiated. [Stefan Eissing]
+
+  *) mod_http2: Simplify ready queue, less memory and better performance. Update
+     mod_http2 version to 1.10.7. [Stefan Eissing]
   
   *) Allow single-char field names inadvertantly disallowed in 2.4.25.
      PR 61220. [Yann Ylavic]
